tests/Pass/test5.cm
void foo (int y, int z)
{
	if (y > 0)
	{
		if (z > 1)
		{
			y = y + 1;
		}
		else
		{
			z = z + 1;
		}
	}
}