tests/Fail/test7.cm
/*  Error since var declaration is not inside any scope */
int x = 3;
int y = 0;
while (x == 3)
{
	y = y + 1;	
}
